--- a/Classifier-backend/Dockerfile
+++ b/Classifier-backend/Dockerfile
@@ -9,9 +9,8 @@ COPY requirements.txt .
 # Install dependencies
 RUN apt-get update && apt-get install -y \
     python3-venv \
- && rm -rf /var/lib/apt/lists/* \
  && python3 -m venv venv \
- && ./venv/bin/activate \
+ && source ./venv/bin/activate \
  && pip install --no-cache-dir -r requirements.txt
 
 COPY . .
