--- a/Classifier-backend/Dockerfile
+++ b/Classifier-backend/Dockerfile
@@ -9,8 +9,9 @@ COPY requirements.txt .
 # Install dependencies
 RUN apt-get update && apt-get install -y \
     python3-venv \
+ && rm -rf /var/lib/apt/lists/* \
  && python3 -m venv venv \
- && source ./venv/bin/activate \
+ && . venv/bin/activate \
  && pip install --no-cache-dir -r requirements.txt
 
 COPY . .
