--- a/Classifier-backend/manifest/RabbitMq.yml
+++ b/Classifier-backend/manifest/RabbitMq.yml
@@ -30,9 +30,11 @@ spec:
   selector:
     app: rabbitmq-service
   ports:
-    - protocol: TCP
+    - name: messaging
+      protocol: TCP
       port: 5672
       targetPort: 5672
-    - protocol: TCP
+    - name: management
+      protocol: TCP
       port: 15672
       targetPort: 15672
