--- a/Classifier-frontend/package.json
+++ b/Classifier-frontend/package.json
@@ -13,7 +13,9 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tabler/icons-react": "^3.1.0",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lottie-react": "^2.4.0",
